@@ -1,6 +1,7 @@
 X X
-    * Add Pickaxe/Shovel/Axe + Flame II = auto-smelt and light path
     * Add Chestplate + Sharpness = reflect damage
+    * Add Hoe + Punch = grow animal
+    * Add Pickaxe/Shovel/Axe + Flame II = auto-smelt and light path
     * Change Hoe + Bane of Arthropods, now left-click starts storm, right-click stops
     * Enhance Bow + Respiration = stapled arrows: try TNT, water, lava (spawn egg, potions...)
     * Enhance Shears + Looting, now can be used to acquire saddle from saddled pigs
